--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.1.1",
+    "axios": "^0.22.0",
     "cheerio": "^1.0.0-rc.10",
     "next": "latest",
     "prop-types": "^15.7.2",
